--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,10 +1,10 @@
 :root {
-  --primary: #8c5cf5;
+  --primary: #FF8C00;
   /* Needed for some hover effects. This is just the R, G and B values of the hex color above */
-  --primary-rgb: 140, 92, 245;
+  --primary-rgb: 255, 140, 0;
   /* Used for links */
-  --primary-light: #a277ff;
-  --primary-lightest: #c2a8fd;
+  --primary-light: #FFA500;
+  --primary-lightest: #FFC04D;
 }
 
 .overview-list {
